syntax = "proto3";

package api.area;

option go_package="github.com/synerex/synerex_alpha/api/simulation/area";



message GetAreaRequest {
    uint64 id = 1;
}

message GetAreaResponse {
    Area area = 1;
}

message Area {
    uint64 id = 1;
    string name = 2;
    repeated uint64 neighbor_areas = 3;
    AreaCoord duplicate_area = 4;
    AreaCoord control_area = 5;
}

message AreaCoord {
    double start_lat = 1;
    double start_lon = 2;
    double end_lat = 3;
    double end_lon = 4;
}
